# iris

./: .gitignore  DATASET_CARD.md  README.md  ci.sh  pyproject.toml
configs/: default.yaml  workbench.example.json
docs/: Limitations.md  findings-multisite.md  tutorial.md  workbench.md
revact/: __init__.py  cli.py  config.py  policies.py  prompt_store.py  prompts.py
scripts/: audit_formal_readiness.py  audit_mutation_miner.py  audit_remediation_baseline.py  audit_worktree.py  export_webarena_env.sh  migrate_grounding_v3.py  quarantine_collection_run.py  quarantine_legacy_lineage.py  quarantine_legacy_training.py  start_vllm.sh
tests/: test_assemble.py  test_candidate_roles.py  test_candidates_s4.py  test_collection_run_quarantine.py  test_distill_qc.py  test_episode_authoring.py  test_eval_audit_cli.py  test_eval_metrics.py  test_eval_rollout_formal.py  test_eval_truth.py  test_fingerprint.py  test_formal_export_governance.py  test_formal_import.py  test_formal_preferences.py  test_formal_readiness_audit.py  test_grounding_schema.py  test_mutation_miner.py  test_offline_pipeline.py  test_on_policy_traces.py  test_opinion_collection.py  test_opinion_labels.py  test_parse_action.py  test_point_live_pipeline.py  test_probe_authoring.py  test_probe_transitions.py  test_probes_mock.py  test_probes_reddit_mock.py  test_prompt_registry_history.py  test_prompts_multiturn_train.py  test_quarantine.py  test_read_only_guard.py  test_signal_evidence.py  test_solver_union.py  test_splits.py  test_stateless_episode_traces.py  test_train_remediation.py  test_viz.py  (+2 more)
(+477 files in other folders)
